finished bank top up request endpoint
