# api/routes/routes.go
@@ -19,10 +19,12 @@ func Api() *fiber.App {
 	api.Get("/wallets", handlers.GetAllWallets)
 	api.Get("/wallets/:id", handlers.GetWalletByID)
 	api.Get("/wallets/user/:id", handlers.GetWalletByUserID)
+	api.Get("/wallets/va/:id", handlers.GetVirtualAccountByWalletID)
 
 	// Transaction routes
 	api.Get("/transactions/wallet/:id", handlers.GetTransactionsByWalletID)
-	api.Post(("/transactions/topup/direct/:id"), handlers.TopUpDirect)
+	api.Post("/transactions/topup/direct/:id", handlers.TopUpDirect)
+	api.Post("/transactions/topup/bank/:va", handlers.TopUpBank)
 
 	return app
 }
